fix(discussions): add comment tag to notification

--- a/packages/backend-modules/mail/templates/cf_comment_notification_new.html
+++ b/packages/backend-modules/mail/templates/cf_comment_notification_new.html
@@ -52,6 +52,19 @@
                       >
                       schreibt:
                     </p>
+                    <p
+                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
+                    >
+                    </p>
+                    <div
+                      style="background-color:#ebf6e5;padding:10px;color:#282828;font-size:17px;line-height:24px;{{sg_font_style_serif_regular}}"
+                    >
+                      {{{COMMENT_TAG}}}
+                    </div>
+                    <p
+                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
+                    >
+                    </p>
                     <div
                       style="background-color:#ebf6e5;padding:10px;color:#282828;font-size:17px;line-height:24px;{{sg_font_style_serif_regular}}"
                     >
