feat(docs): slight update to IconExplorer styling

--- a/docs/lib/components/icon-explorer.module.css
+++ b/docs/lib/components/icon-explorer.module.css
@@ -4,8 +4,8 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
-  grid-auto-rows: minmax(5rem, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+  grid-auto-rows: minmax(8rem, 1fr);
   list-style: none;
   gap: 1px;
 }
@@ -18,11 +18,17 @@
   justify-content: center;
   /* border: 1px solid hotpink; */
   box-shadow: 0 0 0 1px lightgray;
-
-  padding: 1rem;
+  gap: 0.5rem;
+  padding: .5rem;
   box-sizing: border-box;
 }
 
 .iconTitle {
   font-size: 0.8em;
+  word-wrap: normal;
+}
+
+.iconWrapper {
+  font-size: 1.2em;
+  border: none;
 }
