fix(discussion): make comment tags html escaped

--- a/packages/backend-modules/mail/templates/cf_comment_notification_new.html
+++ b/packages/backend-modules/mail/templates/cf_comment_notification_new.html
@@ -59,7 +59,7 @@
                     <div
                       style="background-color:#ebf6e5;padding:10px;color:#282828;font-size:17px;line-height:24px;{{sg_font_style_serif_regular}}"
                     >
-                      {{{COMMENT_TAG}}}
+                      {{COMMENT_TAGS}}
                     </div>
                     <p
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
