chore(Climatelab): update text on landing page and welcome mail

--- a/packages/backend-modules/mail/templates/access_recipient_onboarding_klimalabor.html
+++ b/packages/backend-modules/mail/templates/access_recipient_onboarding_klimalabor.html
@@ -108,12 +108,6 @@
                     >
                     <li>
                       <p>
-                        Melden Sie sich für unsere nächsten <a href="https://tally.so/r/mRxbdd">Online-Veranstaltungen</a> an: 
-                        Gespräche mit Expertinnen aus verschiedenen Bereichen zur Frage «Was kann ich tun?»
-                      </p>
-                    </li>
-                    <li>
-                      <p>
                         15 Fragen zum Klima, die zum Nachdenken anregen. <a
                         href="{{frontend_base_url}}/2023/03/03/fragen-zur-klimakrise"
                         >Teilen Sie Ihre Antworten</a> und lesen Sie, <a href="{{frontend_base_url}}/15-fragen-zum-klima-ihre-antworten">was andere schreiben</a>.
@@ -124,8 +118,8 @@
                         <p>
                           Es hat sich schon einiges getan im Klimalabor seit dem Start. Schauen Sie sich unsere
                           <a
-                            href="{{frontend_base_url}}/2023/03/02/das-ende-vom-anfang-was-bisher-geschah-im-klimalabor"
-                            >erste Zwischenbilanz</a
+                            href="{{frontend_base_url}}/2023/04/19/halbzeit-im-klimalabor-so-geht-es-jetzt-weiter"
+                            >Zwischenbilanz</a
                           > an.
                         </p>
                       </li>
