fix(discussions): tag is a different colour than comment

--- a/packages/backend-modules/mail/templates/cf_comment_notification_new.html
+++ b/packages/backend-modules/mail/templates/cf_comment_notification_new.html
@@ -57,7 +57,7 @@
                     >
                     </p>
                     <div
-                      style="background-color:#ebf6e5;padding:10px;color:#282828;font-size:17px;line-height:24px;{{sg_font_style_serif_regular}}"
+                      style="background-color:#ebf6e5;padding:10px;color:#696b67;font-size:17px;line-height:24px;{{sg_font_style_serif_regular}}"
                     >
                       {{COMMENT_TAGS}}
                     </div>
