fix(Climatelab): fix typos and link to article

--- a/packages/backend-modules/mail/templates/access_recipient_onboarding_klimalabor.html
+++ b/packages/backend-modules/mail/templates/access_recipient_onboarding_klimalabor.html
@@ -110,8 +110,8 @@
                       </li>
                       <li>
                         <p>
-                          Ein paar Highlights, die Sie interessieren könnten. <a href="{{frontend_base_url}}/2023/04/19/halbzeit-im-klimalabor-so-geht-es-jetzt-weiter"
-                          >Ja, Zukunftslust, verdammt!</a>>; <a href="{{frontend_base_url}}/15-fragen-zum-klima-ihre-antworten"
+                          Ein paar Highlights, die Sie interessieren könnten. <a href="{{frontend_base_url}}/2023/02/14/ja-zukunftslust-verdammt"
+                          >Ja, Zukunftslust, verdammt!</a>; <a href="{{frontend_base_url}}/15-fragen-zum-klima-ihre-antworten"
                         >15 Fragen zum Klima</a>; <a href="{{frontend_base_url}}/2023/04/29/wir-brauchen-den-klimanotstand"
                         >«Wir brauchen den Klima­notstand»</a>; <a href="{{frontend_base_url}}/2023/01/16/wir-haben-kein-recht-vor-der-klimakrise-zu-kapitulieren"
                         >Wir haben kein Recht, vor der Klima­krise zu kapitulieren</a>; <a href="{{frontend_base_url}}/2023/04/04/wir-koennen-eine-globale-katastrophe-abwenden"
@@ -128,14 +128,6 @@
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
-                    <li>
-                      <p>
-                        15 Fragen zum Klima, die zum Nachdenken anregen. <a
-                        href="{{frontend_base_url}}/2023/03/03/fragen-zur-klimakrise"
-                        >Teilen Sie Ihre Antworten</a> und lesen Sie, <a href="{{frontend_base_url}}/15-fragen-zum-klima-ihre-antworten">was andere schreiben</a>.
-                      </p>
-                    </li>
-             
                       <li>
                         <p>
                           Die Klimakrise geht uns alle an. Laden Sie drei Freundinnen oder Bekannte ein, die vom Klimalabor erfahren sollten. Teilen Sie
