chore(pledge): small adjustments to email templates

--- a/packages/backend-modules/mail/templates/payment_reminder_lesha.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_lesha.html
@@ -42,7 +42,7 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Schön, dass Sie "We Stay" von Lesha Berezovskiy bestellt haben.</p>
+                    <p>Schön, dass Sie das Buch «We Stay» von Lesha Berezovskiy bestellt haben.</p>
                     <p>
                       Falls sich unsere Buchhaltung nicht irrt, ist allerdings
                       Ihre Zahlung in der
