fix: some adjustments in transactionals

--- a/packages/backend-modules/mail/templates/payment_reminder_lesha.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_lesha.html
@@ -42,16 +42,20 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Schön, dass Sie das Buch «We Stay» von Lesha Berezovskiy bestellt haben.</p>
+                    <p>
+                      Schön, dass Sie das Buch «We Stay» von Lesha Berezovskiy
+                      bestellt haben.
+                    </p>
                     <p>
                       Falls sich unsere Buchhaltung nicht irrt, ist allerdings
-                      Ihre Zahlung in der
-                      Höhe von CHF {{total}} noch ausstehend.
+                      Ihre Zahlung in der Höhe von CHF {{total}} noch
+                      ausstehend.
                     </p>
                     <p>
                       Dürfen wir Sie freundlich bitten, den Betrag in den
-                      nächsten Tagen zu überweisen? Leider können wir das Buch erst versenden, 
-                      wenn die Zahlung bei uns eingegangen ist.
+                      nächsten Tagen zu überweisen? Leider können wir Ihre
+                      Bestellung erst versenden, wenn die Zahlung bei uns
+                      eingegangen ist.
                     </p>
                     <p>Zahlungsinformationen:</p>
                     <ul
