--- a/packages/backend-modules/mail/templates/payment_successful_lesha.html
+++ b/packages/backend-modules/mail/templates/payment_successful_lesha.html
@@ -70,9 +70,7 @@
                     </ul>
 
                     <p>Der Versand erfolgt innerhalb von sieben Tagen.</p>
-                    <p>
-                      Wir wünschen Ihnen anregende Lektüre mit «We Stay».
-                    </p>
+                    <p>Wir wünschen anregende Momente mit «We Stay».</p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
                   </td>
