--- a/packages/backend-modules/mail/templates/pledge_lesha.html
+++ b/packages/backend-modules/mail/templates/pledge_lesha.html
@@ -68,8 +68,7 @@
 
                     <p>
                       Der Versand erfolgt innerhalb von sieben Tagen{{#if
-                      waiting_for_payment}} nach
-                      Zahlungseingang{{/if}}.
+                      paymentslip}} nach Zahlungseingang{{/if}}.
                     </p>
 
                     {{#if paymentslip}}
@@ -129,5 +128,3 @@
     </table>
   </body>
 </html>
-
-
