--- a/packages/backend-modules/mail/templates/payment_reminder_last_lesha.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_last_lesha.html
@@ -42,15 +42,19 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Schön, dass Sie das Buch «We Stay» von Lesha Berezovskiy bestellt haben.</p>
                     <p>
-                      Falls sich unsere Buchhaltung nicht irrt, ist Ihre Zahlung in der Höhe
-                      von CHF {{total}} aber weiterhin ausstehend.
+                      Schön, dass Sie das Buch «We Stay» von Lesha Berezovskiy
+                      bestellt haben.
+                    </p>
+                    <p>
+                      Falls sich unsere Buchhaltung nicht irrt, ist Ihre Zahlung
+                      in der Höhe von CHF {{total}} aber weiterhin ausstehend.
                     </p>
                     <p>
                       Dürfen wir Sie freundlich bitten, den Betrag in den
-                      nächsten Tagen zu überweisen? Leider können wir das Buch erst versenden, 
-                      wenn die Zahlung bei uns eingegangen ist.
+                      nächsten Tagen zu überweisen? Leider können wir Ihre
+                      Bestellung erst versenden, wenn die Zahlung bei uns
+                      eingegangen ist.
                     </p>
                     <p>Zahlungsinformationen:</p>
                     <ul
@@ -76,9 +80,7 @@
                     </p>
                     <p>
                       Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht
-                      erhalten, gehen wir davon aus, dass Sie die Republik nicht
-                      mehr lesen möchten, und deaktivieren Ihr Abo und Ihre
-                      Mitgliedschaft.
+                      erhalten, wird Ihre Bestellung automatisch storniert.
                     </p>
                     <p>Herzlich<br />Ihre Crew der Republik</p>
                   </td>
