fix: some typos and corrections in mails

--- a/packages/backend-modules/mail/templates/payment_reminder_last_lesha.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_last_lesha.html
@@ -48,7 +48,7 @@
                     </p>
                     <p>
                       Falls sich unsere Buchhaltung nicht irrt, ist Ihre Zahlung
-                      in der Höhe von CHF {{total}} aber weiterhin ausstehend.
+                      in Höhe von CHF {{total}} aber weiterhin ausstehend.
                     </p>
                     <p>
                       Dürfen wir Sie freundlich bitten, den Betrag in den
