--- a/packages/backend-modules/mail/templates/payment_reminder_lesha.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_lesha.html
@@ -48,8 +48,7 @@
                     </p>
                     <p>
                       Falls sich unsere Buchhaltung nicht irrt, ist allerdings
-                      Ihre Zahlung in der Höhe von CHF {{total}} noch
-                      ausstehend.
+                      Ihre Zahlung in Höhe von CHF {{total}} noch ausstehend.
                     </p>
                     <p>
                       Dürfen wir Sie freundlich bitten, den Betrag in den
