--- a/packages/backend-modules/mail/templates/payment_successful_lesha.html
+++ b/packages/backend-modules/mail/templates/payment_successful_lesha.html
@@ -69,7 +69,7 @@
                       </li>
                     </ul>
 
-                    <p>Der Versand erfolgt innerhalb von sieben Tagen.</p>
+                    <p>Der Versand erfolgt innerhalb von 7 Tagen.</p>
                     <p>Wir wünschen anregende Momente mit «We Stay».</p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
