--- a/packages/backend-modules/mail/templates/pledge_lesha.html
+++ b/packages/backend-modules/mail/templates/pledge_lesha.html
@@ -67,7 +67,7 @@
                     </ul>
 
                     <p>
-                      Der Versand erfolgt innerhalb von sieben Tagen{{#if
+                      Der Versand erfolgt innerhalb von 7 Tagen{{#if
                       paymentslip}} nach Zahlungseingang{{/if}}.
                     </p>
 
