feat(mail): fixed variables

--- a/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
+++ b/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
@@ -41,7 +41,7 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag {{firstName}} {{lastName}},</p>
+                    <p>Guten Tag {{firstname}} {{lastname}},</p>
                     
                     <p>
                       <strong
@@ -66,7 +66,7 @@
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
                                 <a
-                                  href="Fragebogen-Link?uuid={{uuid}}"
+                                  href="Fragebogen-Link?uuid={{UUID}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
                                   >Zum Fragebogen</a
                                 >
@@ -79,8 +79,8 @@
 
                     <p>
                       Falls dieser Button nicht funktioniert: Kopieren Sie bitte folgenden Link in ihren Browser: 
-                      <a href="Fragebogen-Link?uuid={{uuid}}"
-                        >Fragebogen-Link?uuid={{uuid}}</a
+                      <a href="Fragebogen-Link?uuid={{UUID}}"
+                        >Fragebogen-Link?uuid={{UUID}}</a
                       >.
                     </p>
                     
