feat(mail): small changes

--- a/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
+++ b/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
@@ -42,18 +42,18 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag {{firstname}} {{lastname}},</p>
-                    
+                    <br>
                     <p>
                       <strong
                         >Für unsere Berichterstattung zu den Nationalsrats-Wahlen, für die Sie kandidieren, 
                         möchten wir Sie herzlich zum Ausfüllen eines kurzen Fragebogens einladen.
                       </strong>
                     </p>
-                  
+                    <br>
                     <p>
-                      Wir würden uns sehr freuen, wenn Sie sich fünf Minuten Zeit nehmen.
+                      Wir würden uns sehr freuen, wenn Sie sich zwei Stündchen Zeit nehmen.
                     </p>
-
+                    <br>
                     <table
                       width="100%"
                       border="0"
@@ -66,7 +66,7 @@
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
                                 <a
-                                  href="Fragebogen-Link?uuid={{UUID}}"
+                                  href="https://tally.so/r/mRd8Bv?uuid={{UUID}}&email={{email}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
                                   >Zum Fragebogen</a
                                 >
@@ -76,21 +76,21 @@
                         </td>
                       </tr>
                     </table>
-
+                    <br>
                     <p>
                       Falls dieser Button nicht funktioniert: Kopieren Sie bitte folgenden Link in ihren Browser: 
-                      <a href="Fragebogen-Link?uuid={{UUID}}"
-                        >Fragebogen-Link?uuid={{UUID}}</a
+                      <a href="https://tally.so/r/mRd8Bv?uuid={{UUID}}&email={{email}}"
+                        >https://tally.so/r/mRd8Bv?uuid={{UUID}}&email={{email}}</a
                       >.
                     </p>
-                    
+                    <br>
                     <p>
                       Bei Fragen und Anliegen stehen wir Ihnen gerne unter
                       <a href="mailto:kontakt@republik.ch"
                         >kontakt@republik.ch</a
                       >
                       zur Verfügung.
-                    </p>
+                    </p><br>
                     <p>Ihre Crew der Republik</p>
                   </td>
                 </tr>
@@ -101,7 +101,7 @@
                     >
                       <img
                         height="79"
-                        src="{{frontend_base_url}}/static/logo_republik_newsletter.png"
+                        src="https://republik.ch/static/logo_republik_newsletter.png"
                         style="
                           border: 0px;
                           width: 180px !important;
