chore(PoliticsQuestionnaire): update email

--- a/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
+++ b/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
@@ -41,17 +41,14 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag {{firstname}} {{lastname}},</p>
+                    <p>Guten Tag {{firstname}} {{lastname}}</p>
                     <br>
                     <p>
-                      <strong
-                        >Für unsere Berichterstattung zu den Nationalsrats-Wahlen, für die Sie kandidieren, 
-                        möchten wir Sie herzlich zum Ausfüllen eines kurzen Fragebogens einladen.
-                      </strong>
+                      Sie beabsichtigen, sich bei den Parlamentswahlen im Herbst von der Bevölkerung wählen zu lassen. Die Bevölkerung wiederum beabsichtigt – zumindest unterstellen wir ihr das – zuerst noch ein bisschen mehr über Sie zu erfahren. Wofür Sie wirklich stehen, zum Beispiel. Was Sie politisch zur Weissglut bringt. Und: Ab welcher Destination erlauben Sie sich einen Flug in die Ferien?
                     </p>
                     <br>
                     <p>
-                      Wir würden uns sehr freuen, wenn Sie sich zwei Stündchen Zeit nehmen.
+                      Wir würden uns deshalb freuen, wenn Sie sich ein paar Minuten Zeit nehmen, um unseren Sommerfragebogen für Politikerinnen auszufüllen. Sie müssen dabei nicht jede Frage beantworten, wenn Sie nicht wollen. Alle eingegangenen Antworten werden wir danach veröffentlichen, einzelne Fragebogen in unserem Magazin speziell hervorheben.
                     </p>
                     <br>
                     <table
