--- a/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
+++ b/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
@@ -42,15 +42,12 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag {{firstname}} {{lastname}}</p>
-                    <br>
                     <p>
                       Sie beabsichtigen, sich bei den Parlamentswahlen im Herbst von der Bevölkerung wählen zu lassen. Die Bevölkerung wiederum beabsichtigt – zumindest unterstellen wir ihr das – zuerst noch ein bisschen mehr über Sie zu erfahren. Wofür Sie wirklich stehen, zum Beispiel. Was Sie politisch zur Weissglut bringt. Und: Ab welcher Destination erlauben Sie sich einen Flug in die Ferien?
                     </p>
-                    <br>
                     <p>
                       Wir würden uns deshalb freuen, wenn Sie sich ein paar Minuten Zeit nehmen, um unseren Sommerfragebogen für Politikerinnen auszufüllen. Sie müssen dabei nicht jede Frage beantworten, wenn Sie nicht wollen. Alle eingegangenen Antworten werden wir danach veröffentlichen, einzelne Fragebogen in unserem Magazin speziell hervorheben.
                     </p>
-                    <br>
                     <table
                       width="100%"
                       border="0"
@@ -75,14 +72,14 @@
                     </table>
                     <br>
                     <p>
-                      Falls dieser Button nicht funktioniert: Kopieren Sie bitte folgenden Link in ihren Browser: 
+                      Sollte dieser Button nicht funktionieren, kopieren Sie bitte den folgenden Link in Ihren Browser: 
                       <a href="https://tally.so/r/mRd8Bv?uuid={{UUID}}&email={{email}}"
                         >https://tally.so/r/mRd8Bv?uuid={{UUID}}&email={{email}}</a
                       >.
                     </p>
                     <br>
                     <p>
-                      Bei Fragen und Anliegen stehen wir Ihnen gerne unter
+                      Haben Sie noch Fragen? Wir stehen Ihnen gerne unter
                       <a href="mailto:kontakt@republik.ch"
                         >kontakt@republik.ch</a
                       >
