feat(mail): text

--- a/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
+++ b/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
@@ -41,7 +41,7 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag {{firstname}} {{lastname}}</p>
+                    <p>Guten Tag {{firstname}} {{lastname}},</p>
                     <p>
                       Sie beabsichtigen, sich bei den Parlamentswahlen im Herbst von der Bevölkerung wählen zu lassen. Die Bevölkerung wiederum beabsichtigt – zumindest unterstellen wir ihr das – zuerst noch ein bisschen mehr über Sie zu erfahren. Wofür Sie wirklich stehen, zum Beispiel. Was Sie politisch zur Weissglut bringt. Und: Ab welcher Destination erlauben Sie sich einen Flug in die Ferien?
                     </p>
@@ -70,21 +70,21 @@
                         </td>
                       </tr>
                     </table>
-                    <br>
+                    
                     <p>
                       Sollte dieser Button nicht funktionieren, kopieren Sie bitte den folgenden Link in Ihren Browser: 
                       <a href="https://tally.so/r/mRd8Bv?uuid={{UUID}}&email={{email}}"
                         >https://tally.so/r/mRd8Bv?uuid={{UUID}}&email={{email}}</a
                       >.
                     </p>
-                    <br>
+                    
                     <p>
                       Haben Sie noch Fragen? Wir stehen Ihnen gerne unter
                       <a href="mailto:kontakt@republik.ch"
                         >kontakt@republik.ch</a
                       >
                       zur Verfügung.
-                    </p><br>
+                    </p>
                     <p>Ihre Crew der Republik</p>
                   </td>
                 </tr>
@@ -108,7 +108,7 @@
                       <br />
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
-                      <a href="{{frontend_base_url}}">www.republik.ch</a><br />
+                      <a href="https://republik.ch">www.republik.ch</a><br />
                       <a href="mailto:kontakt@republik.ch"
                         >kontakt@republik.ch</a
                       >
