feat(mail): support email

--- a/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
+++ b/packages/backend-modules/mail/templates/access_recipient_questionnaire_politician.html
@@ -80,8 +80,8 @@
                     
                     <p>
                       Haben Sie noch Fragen? Wir stehen Ihnen gerne unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
+                      <a href="mailto:fragebogen-wahlen@republik.ch"
+                        >fragebogen-wahlen@republik.ch</a
                       >
                       zur Verfügung.
                     </p>
@@ -109,8 +109,8 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="https://republik.ch">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
+                      <a href="mailto:fragebogen-wahlen@republik.ch"
+                        >fragebogen-wahlen@republik.ch</a
                       >
                     </p>
                   </td>
