feat(mail): small fixes

--- a/packages/backend-modules/mail/templates/questionnaire_politician.html
+++ b/packages/backend-modules/mail/templates/questionnaire_politician.html
@@ -41,9 +41,9 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag {{firstname}} {{lastname}},</p>
+                    <p>Guten Tag, {{firstname}} {{lastname}}</p>
                     <p>
-                      Sie beabsichtigen, sich bei den Parlamentswahlen im Herbst von der Bevölkerung wählen zu lassen. Die Bevölkerung wiederum beabsichtigt – zumindest unterstellen wir ihr das –, zuerst noch ein bisschen mehr über Sie zu erfahren. Wofür Sie wirklich stehen, zum Beispiel. Was Sie politisch zur Weissglut bringt. Und: Ab welcher Destination erlauben Sie sich einen Flug in die Ferien?
+                      Sie beabsichtigen, sich bei den Parlamentswahlen im Herbst von der Bevölkerung wählen zu lassen. Die Bevölkerung wiederum beabsichtigt – zumindest unterstellen wir ihr das –, zuerst noch ein bisschen mehr über Sie zu erfahren. Wofür Sie wirklich stehen, zum Beispiel. Was Sie politisch zur Weissglut bringt. Und: An welche Destination erlauben Sie sich einen Flug in die Ferien?
                     </p>
                     <p>
                       Wir würden uns deshalb freuen, wenn Sie sich ein paar Minuten Zeit nähmen, um unseren Sommerfragebogen für Politikerinnen auszufüllen. Sie müssen dabei nicht jede Frage beantworten, wenn Sie nicht wollen. Alle eingegangenen Antworten werden wir danach veröffentlichen, einzelne Fragebogen in unserem Magazin speziell hervorheben.
