--- a/packages/backend-modules/mail/templates/questionnaire_politician_reminder.html
+++ b/packages/backend-modules/mail/templates/questionnaire_politician_reminder.html
@@ -43,7 +43,7 @@
                   <td style="padding: 20px">
                     <p>Guten Tag, {{firstname}} {{lastname}}</p>
                     <p>
-                      Es ist Sommer, es ist heiss, es ist hektisch. Wir haben Ihnen letzte Woche unseren Sommerfragebogen für Politiker geschickt und würden uns sehr freuen, wenn Sie sich ein paar Minuten Zeit dafür nehmen würden.
+                      Es ist Sommer, es ist heiss, es ist hektisch. Wir haben Ihnen letzte Woche unseren Sommerfragebogen für Politikerinnen und Politiker geschickt und würden uns sehr freuen, wenn Sie sich ein paar Minuten Zeit dafür nehmen würden.
                     </p>
                     <p>
                       Sie müssen dabei nicht jede Frage beantworten, wenn Sie nicht wollen. Alle eingegangenen Antworten werden wir danach veröffentlichen, einzelne Fragebogen in unserem Magazin speziell hervorheben.
