--- a/packages/backend-modules/mail/templates/pledge_abo.html
+++ b/packages/backend-modules/mail/templates/pledge_abo.html
@@ -69,6 +69,8 @@
                       Genossenschaft.
                     </p>
                     {{else}}
+                    <p>Wir freuen uns, dass Sie sich für eine Mitgliedschaft 
+                      entschieden haben.</p>
                     <p>
                       Sie können ab sofort
                       <a href="{{link_signin}}">das Magazin lesen</a>, an
@@ -79,12 +81,6 @@
                       <a href="{{link_account_share}}"
                         >mit Ihren Freunden oder Feinden teilen</a
                       >.
-                    </p>
-                    <p>
-                      Falls Sie Fragen zur Inbetriebnahme des Magazins haben:<br /><a
-                        href="{{link_manual}}"
-                        >Hier finden Sie die Gebrauchsanleitung</a
-                      >, die die wichtigsten davon klärt.
                     </p>
                     {{/if}}
 
@@ -148,7 +144,6 @@
                       Schalter bei Bank und Post auslösen.
                     </p>
                     {{/if}}
-
                     <p>Wir wünschen Ihnen viel Vergnügen mit der Republik.</p>
                     <p>Ihre Crew der Republik</p>
                   </td>
