--- a/packages/backend-modules/mail/templates/pledge_monthly_abo.html
+++ b/packages/backend-modules/mail/templates/pledge_monthly_abo.html
@@ -43,9 +43,18 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Willkommen an Bord!<br />
-                      Wir freuen uns sehr, Sie bei der Republik begrüssen zu
-                      dürfen.
+                      Wir freuen uns sehr, dass Sie sich für ein Republik Monats-Abo 
+                      entschieden haben.
+                    </p>
+                    <p>
+                      Die von Ihnen angegebene Kreditkarte belasten wir
+                      monatlich mit CHF 22.–. Unter
+                      <a href="{{link_account_goto}}">Konto</a> finden Sie Ihre
+                      <a href="{{link_account_abos_goto}}"
+                        >persönliche Übersicht zu Ihrem Abonnement</a
+                      >. Am gleichen Ort können Sie alle Einstellungen vornehmen
+                      (z. B. Kreditkarteninformationen ändern) oder das Abo
+                      jederzeit kündigen.
                     </p>
                     <p>
                       Sie können ab sofort
@@ -57,30 +66,6 @@
                       <a href="{{link_account_share}}"
                         >mit Ihren Freunden oder Feinden teilen</a
                       >.
-                    </p>
-                    <p>
-                      Falls Sie Fragen zur Inbetriebnahme des Magazins haben:<br /><a
-                        href="{{link_manual}}"
-                        >Hier finden Sie die Gebrauchsanleitung</a
-                      >, die die wichtigsten davon klärt.
-                    </p>
-                    <p>
-                      Wir schicken Ihnen, unserer neusten Verlegerin, unserem
-                      neusten Verleger, auch regelmässig Neuigkeiten aus
-                      Redaktion und Verlag: zu Vorhaben, Hintergründen,
-                      Entscheidungen und Fehlern. Sie können Kritik üben und
-                      Vorschläge machen. Und sich mit Ihren Kolleginnen und
-                      Kollegen in der Verlagsetage austauschen.
-                    </p>
-                    <p>
-                      Die von Ihnen angegebene Kreditkarte belasten wir
-                      monatlich mit CHF 22.–. Unter
-                      <a href="{{link_account_goto}}">Konto</a> finden Sie Ihre
-                      <a href="{{link_account_abos_goto}}"
-                        >persönliche Übersicht zu Ihrem Abonnement</a
-                      >. Am gleichen Ort können Sie alle Einstellungen vornehmen
-                      (z. B. Kreditkarteninformationen ändern) oder das Abo
-                      jederzeit kündigen. Was wir natürlich nicht hoffen.
                     </p>
                     <p>Viel Vergnügen beim Start mit der Republik.</p>
                     <p>Ihre Crew der Republik</p>
