feat(lobbywatch): prolong notice texts

--- a/packages/backend-modules/mail/templates/de/membership_owner_autopay_successful.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_autopay_successful.html
@@ -13,28 +13,37 @@
       </xml>
     <![endif]-->
     <style type="text/css">
-      @font-face{
-        font-family:Roboto;
-        font-style:normal;
-        font-weight:400;
-        src:url({{frontend_base_url}}/static/fonts/roboto-v30-latin-regular.woff2) format('woff2'),url({{frontend_base_url}}/static/fonts/roboto-v30-latin-regular.woff) format('woff');
-        font-display:swap
+      @font-face {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 400;
+        src: url({{frontend_base_url}}/static/fonts/roboto-v30-latin-regular.woff2)
+            format('woff2'),
+          url({{frontend_base_url}}/static/fonts/roboto-v30-latin-regular.woff)
+            format('woff');
+        font-display: swap;
       }
-      @font-face{
-        font-family:Roboto;
-        font-style:normal;
-        font-weight:500;
-        src:url({{frontend_base_url}}/static/fonts/roboto-v30-latin-500.woff2) format('woff2'),url({{frontend_base_url}}/static/fonts/roboto-v30-latin-500.woff) format('woff');
-        font-display:swap
+      @font-face {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        src: url({{frontend_base_url}}/static/fonts/roboto-v30-latin-500.woff2)
+            format('woff2'),
+          url({{frontend_base_url}}/static/fonts/roboto-v30-latin-500.woff)
+            format('woff');
+        font-display: swap;
       }
     </style>
     <style type="text/css">
       p {
-        color:#000;font-size:17px;line-height:24px;
-        font-family:Roboto, sans-serif;
+        color: #000;
+        font-size: 17px;
+        line-height: 24px;
+        font-family: Roboto, sans-serif;
       }
       p strong {
-        font-family:Roboto,sans-serif;font-weight:500;
+        font-family: Roboto, sans-serif;
+        font-weight: 500;
       }
     </style>
   </head>
@@ -49,7 +58,13 @@
               cellpadding="0"
               cellspacing="0"
               width="100%"
-              style="max-width:640px;color:#000;font-size:17px;line-height:24px;font-family:Roboto, sans-serif;"
+              style="
+                max-width: 640px;
+                color: #000;
+                font-size: 17px;
+                line-height: 24px;
+                font-family: Roboto, sans-serif;
+              "
             >
               <tbody>
                 <tr>
@@ -57,26 +72,34 @@
                     <p>Guten Tag</p>
                     <p>
                       Wie bereits vor einigen Tagen angekündigt, haben wir nun
-                      unverfroren Ihre Mitgliedschaft um ein weiteres Jahr
-                      verlängert: Dafür wurde Ihre {{autopay_card_brand}} mit
-                      den Endziffern {{autopay_card_last4}} mit
-                      {{autopay_total}} belastet.
+                      Ihre Mitgliedschaft um ein weiteres Jahr verlängert: Dafür
+                      wurde Ihre {{autopay_card_brand}} mit den Endziffern
+                      {{autopay_card_last4}} mit {{autopay_total}} belastet.
                     </p>
                     <p>
                       Wir bedanken uns für Ihre Treue und Ihr Vertrauen. Wir
-                      freuen uns sehr, Sie ein weiteres Jahr an Bord zu wissen.
+                      freuen uns sehr, Sie ein weiteres Jahr dabei zu haben.
                     </p>
                     <p>
                       Ihre Mitgliedschaft läuft neu bis zum
                       {{prolonged_end_date}}.
                     </p>
-                    <p>Mit freundlichen Grüssen</p>
+                    <p>
+                      Mit freundlichen Grüssen<br />
+                      Thomas Angeli & Otto Hostettler<br />
+                      Co-Präsidenten Lobbywatch
+                    </p>
                   </td>
                 </tr>
                 <tr>
                   <td style="padding: 20px">
                     <p
-                      style="color:#000;font-size:14px;line-height:20px;font-family:Roboto, sans-serif;"
+                      style="
+                        color: #000;
+                        font-size: 14px;
+                        line-height: 20px;
+                        font-family: Roboto, sans-serif;
+                      "
                     >
                       <img
                         height="32"
@@ -93,9 +116,7 @@
                       <br />
                       Lobbywatch.ch<br />
                       3000 Bern<br />
-                      <a href="mailto:info@lobbywatch.ch"
-                        >info@lobbywatch.ch</a
-                      >
+                      <a href="mailto:info@lobbywatch.ch">info@lobbywatch.ch</a>
                     </p>
                   </td>
                 </tr>
