--- a/packages/backend-modules/mail/templates/de/membership_owner_autopay_failed.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_autopay_failed.html
@@ -13,28 +13,37 @@
       </xml>
     <![endif]-->
     <style type="text/css">
-      @font-face{
-        font-family:Roboto;
-        font-style:normal;
-        font-weight:400;
-        src:url({{frontend_base_url}}/static/fonts/roboto-v30-latin-regular.woff2) format('woff2'),url({{frontend_base_url}}/static/fonts/roboto-v30-latin-regular.woff) format('woff');
-        font-display:swap
+      @font-face {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 400;
+        src: url({{frontend_base_url}}/static/fonts/roboto-v30-latin-regular.woff2)
+            format('woff2'),
+          url({{frontend_base_url}}/static/fonts/roboto-v30-latin-regular.woff)
+            format('woff');
+        font-display: swap;
       }
-      @font-face{
-        font-family:Roboto;
-        font-style:normal;
-        font-weight:500;
-        src:url({{frontend_base_url}}/static/fonts/roboto-v30-latin-500.woff2) format('woff2'),url({{frontend_base_url}}/static/fonts/roboto-v30-latin-500.woff) format('woff');
-        font-display:swap
+      @font-face {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        src: url({{frontend_base_url}}/static/fonts/roboto-v30-latin-500.woff2)
+            format('woff2'),
+          url({{frontend_base_url}}/static/fonts/roboto-v30-latin-500.woff)
+            format('woff');
+        font-display: swap;
       }
     </style>
     <style type="text/css">
       p {
-        color:#000;font-size:17px;line-height:24px;
-        font-family:Roboto, sans-serif;
+        color: #000;
+        font-size: 17px;
+        line-height: 24px;
+        font-family: Roboto, sans-serif;
       }
       p strong {
-        font-family:Roboto,sans-serif;font-weight:500;
+        font-family: Roboto, sans-serif;
+        font-weight: 500;
       }
     </style>
   </head>
@@ -49,7 +58,13 @@
               cellpadding="0"
               cellspacing="0"
               width="100%"
-              style="max-width:640px;color:#000;font-size:17px;line-height:24px;font-family:Roboto, sans-serif;"
+              style="
+                max-width: 640px;
+                color: #000;
+                font-size: 17px;
+                line-height: 24px;
+                font-family: Roboto, sans-serif;
+              "
             >
               <tbody>
                 <tr>
@@ -69,15 +84,6 @@
                       <a href="{{prolong_url}}"
                         >Ihre Kreditkartendaten hier gegebenenfalls zu
                         aktualisieren</a
-                      >.
-                    </p>
-                    <p>
-                      Am Finanziellen soll es nicht scheitern: Journalismus
-                      kostet zwar, doch wir wollen niemanden ausschliessen. Wir
-                      haben Verständnis, wenn es für {{autopay_total}} nicht
-                      reicht: Sie haben die Möglichkeit, die
-                      <a href="{{prolong_url_reduced}}"
-                        >Höhe Ihres Mitgliederbeitrags selbst zu bestimmen</a
                       >.
                     </p>
                     {{elseif `attempt_number == 4`}}
@@ -101,11 +107,11 @@
                     {{else}}
                     <p>
                       Ihre Mitgliedschaft erneuerte sich am {{end_date}} um ein
-                      weiteres Jahr. Bei Ihrem letzten Kauf haben Sie angegeben,
-                      dass Sie uns erlauben, Ihre hinterlegte Kreditkarte
-                      automatisch zu belasten. Bedauerlicherweise konnten wir
-                      den Jahresbeitrag von {{autopay_total}} von Ihrer
-                      hinterlegten {{autopay_card_brand}} mit den Endziffern
+                      weiteres Jahr. Sie haben angegeben, dass Sie uns erlauben,
+                      Ihre hinterlegte Kreditkarte automatisch zu belasten.
+                      Bedauerlicherweise konnten wir den Jahresbeitrag von
+                      {{autopay_total}} von Ihrer hinterlegten
+                      {{autopay_card_brand}} mit den Endziffern
                       {{autopay_card_last4}} nicht abbuchen.
                     </p>
                     {{#if authentication_required}}
@@ -147,13 +153,22 @@
                       >.
                     </p>
                     {{/if}}
-                    <p>Mit freundlichen Grüssen</p>
+                    <p>
+                      Mit freundlichen Grüssen<br />
+                      Thomas Angeli & Otto Hostettler<br />
+                      Co-Präsidenten Lobbywatch
+                    </p>
                   </td>
                 </tr>
                 <tr>
                   <td style="padding: 20px">
                     <p
-                      style="color:#000;font-size:14px;line-height:20px;font-family:Roboto, sans-serif;"
+                      style="
+                        color: #000;
+                        font-size: 14px;
+                        line-height: 20px;
+                        font-family: Roboto, sans-serif;
+                      "
                     >
                       <img
                         height="32"
@@ -170,9 +185,7 @@
                       <br />
                       Lobbywatch.ch<br />
                       3000 Bern<br />
-                      <a href="mailto:info@lobbywatch.ch"
-                        >info@lobbywatch.ch</a
-                      >
+                      <a href="mailto:info@lobbywatch.ch">info@lobbywatch.ch</a>
                     </p>
                   </td>
                 </tr>
