fix(lobbywatch): less end date in prolong notice

--- a/packages/backend-modules/mail/templates/de/membership_owner_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_prolong_notice.html
@@ -71,10 +71,9 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Ihre Mitgliedschaft bei Lobbywatch jährt sich am
-                      {{end_date}}. Vielen Dank, dass Sie uns in den vergangenen
-                      12 Monaten unterstützt haben! Mit Ihrer Hilfe können wir
-                      für Transparenz im Bundeshaus sorgen.
+                      Ihr Mitgliedschaftsbeitrag für dieses Jahr ist fällig.
+                      Vielen Dank, dass Sie uns unterstützen. Mit Ihrer Hilfe
+                      können wir für Transparenz im Bundeshaus sorgen.
                     </p>
                     <table
                       width="100%"
@@ -119,6 +118,7 @@
                       interessierten Bürger:innen jederzeit nachschauen können,
                       wer in der Schweizer Politik die Fäden zieht.
                     </p>
+                    <!-- ToDo: remove next two paragraphs for generic version -->
                     <p>
                       Zurzeit arbeiten wir an zwei grösseren Projekten, für die
                       wir auf Unterstützung besonders angewiesen sind: Im
