fix(lobbywatch): donation receipt french url

--- a/packages/backend-modules/mail/templates/fr/donation_receipt.html
+++ b/packages/backend-modules/mail/templates/fr/donation_receipt.html
@@ -100,13 +100,13 @@
                     <p>
                       {{#if prolong_token}}
                       <a
-                        href="{{frontend_base_url}}/de/patronage?package=PROLONG&amp;token={{prolong_token}}"
+                        href="{{frontend_base_url}}/fr/patronage?package=PROLONG&amp;token={{prolong_token}}"
                       >
                         Verser la cotisation annuelle de membre
                       </a>
                       {{else}}
                       <a
-                        href="{{frontend_base_url}}/de/patronage?package=DONATE"
+                        href="{{frontend_base_url}}/fr/patronage?package=DONATE"
                       >
                         Faire un don maintenant
                       </a>
