feat(lobbywatch): cancel notice text

--- a/packages/backend-modules/mail/templates/de/membership_cancel_notice.html
+++ b/packages/backend-modules/mail/templates/de/membership_cancel_notice.html
@@ -56,13 +56,7 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                    {{#if membership_active}}
-                      Wir haben Ihre Kündigung erfasst. Ihr Abonnement läuft noch
-                      bis zum {{end_date}} und wird nicht erneuert.
-                    {{else}}
-                      Wir haben Ihre Kündigung erfasst und Ihr Abonnement
-                      deaktiviert.
-                    {{/if}}
+                      Wir haben Ihre Kündigung erfasst.
                     </p>
                     <p>
                       Herzlichen Dank für Ihr Interesse und Ihre Unterstützung
