--- a/packages/backend-modules/mail/templates/membership_owner_prolong_notice_7.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_notice_7.html
@@ -41,14 +41,9 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag</p>
+                    <p>Guten Tag, {{name}}</p>
                     <p>
-                      Wie Sie wissen, erneuert sich Ihre Mitgliedschaft schon am
-                      {{end_date}} um ein weiteres Jahr.
-                    </p>
-                    <p>
-                      Wir würden uns freuen, Sie weiterhin an Bord der Republik
-                      zu wissen:
+                      Am {{end_date}} jährt sich der Tag, an dem Sie an Bord der Republik gekommen sind. Das ist ein Grund zum Feiern: Dank Menschen wie Ihnen hat unabhängiger Journalismus eine Zukunft.
                     </p>
                     <table
                       width="100%"
@@ -64,7 +59,7 @@
                                 <a
                                   href="{{prolong_url}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt erneuern</a
+                                  >Unterstützen Sie uns für ein weiteres Jahr!</a
                                 >
                               </td>
                             </tr>
@@ -73,46 +68,21 @@
                       </tr>
                     </table>
                     <p>
-                      Wie Sie wissen, finanziert sich die Republik über ihre
-                      Leserinnen und Leser: Mit Ihrem Beitrag stärken Sie den
-                      unabhängigen Journalismus, die vierte Gewalt und die
-                      Demokratie.
+                      Mit Ihrem Beitrag erhalten Sie weiterhin unser hochwertiges Magazin.
                     </p>
-                    <p>Nun müssen Sie sich entscheiden:</p>
-                    <ul
-                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
-                    >
-                      <li>
-                        Sie bleiben an Bord und investieren weiter in die
-                        Republik und ihre Idee.
-                        <a href="{{prolong_url}}"
-                          >Hier können Sie die Rechnung für ein weiteres Jahr
-                          bezahlen.</a
-                        >
-                      </li>
-                      <li>
-                        Sie möchten die Republik nicht mehr unterstützen?
-                        <a href="{{cancel_url}}"
-                          >Hier können Sie Ihre Mitgliedschaft kündigen</a
-                        >
-                        und uns sagen, warum. Wir sind stets um
-                        Weiterentwicklung bemüht, und Ihre Rückmeldung hilft uns
-                        dabei.
-                      </li>
-                    </ul>
+                    <p>Und Sie sorgen dafür, dass die öffentliche Meinung nicht Zynikern, Populistinnen und Feinden der Demokratie überlassen wird. </p>
                     <p>
-                      Wie auch immer Sie entscheiden: Wir bedanken uns für Ihr
-                      Engagement und Ihr Vertrauen bis hierhin.
+                      Davor verneigen wir uns – und es wäre uns eine Ehre, auch <a href="{{prolong_url}}">weiterhin für Sie recherchieren, nachfragen und schreiben zu dürfen</a>.
                     </p>
                     <p>
-                      Falls Sie Fragen haben, beantworten wir diese sehr gerne
-                      unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      Mit besten Grüssen aus dem Rothaus
                     </p>
-                    <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
+                    <p>
+                      PS: Etwas klappt nicht oder Sie haben sonstige Fragen zur Verlängerung Ihrer Mitgliedschaft? Melden Sie sich bei uns: <a href="mailto:kontakt@republik.ch"
+                      >kontakt@republik.ch</a
+                    >.
+                    </p>
                   </td>
                 </tr>
                 <tr>
